# genproc

./: Cargo.toml  LICENSE  README.md  example
src/: main.rs
src/processor/: error.rs  location.rs  mod.rs  parser.rs  tokens.rs
src/processor/eval/: directives.rs  mod.rs  scope.rs
