[package]
name = "preproc"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.2"
clap = { version = "4.3.19", features = ["derive"] }
clio = { version = "0.3.4", features = ["clap-parse"] }
float-cmp = "0.9.0"
line-index = "0.1.0"
once_cell = "1.18.0"
owo-colors = "3.5.0"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.9.3"
thiserror = "1.0.44"
unicode-xid = "0.2.4"
